feat: & 运算符添加

--- a/TypeScript_TODO/docs/01_TS 中那些奇怪的符号.md
+++ b/TypeScript_TODO/docs/01_TS 中那些奇怪的符号.md
@@ -21,6 +21,9 @@
   - [1.工具类型](#1工具类型)
     - [1.1 `Partial<T>`](#11-partialt)
     - [1.2 `Required<T>`](#12-requiredt)
+- [五、& 运算符](#五-运算符)
+  - [1.同名基础类型属性的合并](#1同名基础类型属性的合并)
+  - [2.同名非基础类型属性的合并](#2同名非基础类型属性的合并)
 
 ## 一、! 非空断言操作符
 
@@ -194,6 +197,78 @@ TypeScript 内置的工具类型可以快速地把某个接口中定义的属性
 type PullDownRefresh = Required<Partial<PullDownRefreshConfig>>
 ```
 内置实现方式：
+```ts
+type Required<T> = {
+  [P in keyof T]-?: T[P];
+};
+```
+通过 -? 移除了可选属性中的 ?，使得属性从可选变为必选的。
+
+## 五、& 运算符
+
+> 通过 & 运算符可以**将现有的多种类型叠加到一起成为一种类型**，它包含了所需的所有类型的特性
+
+```typescript
+type PartialPointX = { x: number; };
+type Point = PartialPointX & { y: number; };
+
+let point: Point = {
+  x: 1,
+  y: 1
+}
+```
+
+### 1.同名基础类型属性的合并
+
+```typescript
+interface X {
+  c: string;
+  d: string;
+}
+
+interface Y {
+  c: number;
+  e: string
+}
+
+type XY = X & Y;
+type YX = Y & X;
+
+let p: XY;
+let q: YX;
+```
+同名类型属性合并就会变成两种属性与的关系，因此不存在，会展示为never类型
+
+### 2.同名非基础类型属性的合并
+
+> 存在相同的成员，且成员类型为非基本数据类型，那么是可以成功合并。
+
+```typescript
+interface D { d: boolean; }
+interface E { e: string; }
+interface F { f: number; }
+
+interface A { x: D; }
+interface B { x: E; }
+interface C { x: F; }
+
+type ABC = A & B & C;
+
+let abc: ABC = {
+  x: {
+    d: true,
+    e: 'semlinker',
+    f: 666
+  }
+};
+```
+
+
+
+
+
+
+
 
 
 ---
