--- a/TypeScript_TODO/docs/01_TS 中那些奇怪的符号.md
+++ b/TypeScript_TODO/docs/01_TS 中那些奇怪的符号.md
@@ -24,6 +24,12 @@
 - [五、& 运算符](#五-运算符)
   - [1.同名基础类型属性的合并](#1同名基础类型属性的合并)
   - [2.同名非基础类型属性的合并](#2同名非基础类型属性的合并)
+- [六、| 分隔符](#六-分隔符)
+  - [类型保护](#类型保护)
+    - [1.in 关键字](#1in-关键字)
+    - [2.typeof 关键字](#2typeof-关键字)
+    - [3.`instanceof` 关键字](#3instanceof-关键字)
+    - [4.自定义类型保护的类型谓词](#4自定义类型保护的类型谓词)
 
 ## 一、! 非空断言操作符
 
@@ -262,6 +268,145 @@ let abc: ABC = {
   }
 };
 ```
+
+## 六、| 分隔符
+
+在 TypeScript 中联合类型,表示取值可以为多种类型中的一种,联合类型使用 | 分隔每个类型。
+
+
+### 类型保护
+
+>类型保护是可执行运行时检查的一种表达式，用于确保该类型在一定的范围内
+
+类型保护与特性检测并不是完全不同，其主要思想是尝试检测属性、方法或原型，以确定如何处理值。
+
+下面有四种方式实现类型保护
+
+#### 1.in 关键字
+
+```typescript
+interface Admin {
+  name: string;
+  privileges: string[];
+}
+
+interface Employee {
+  name: string;
+  startDate: Date;
+}
+
+type UnknownEmployee = Employee | Admin;
+
+function printEmployeeInformation(emp: UnknownEmployee) {
+  console.log("Name: " + emp.privileges);
+  if ("privileges" in emp) {
+    console.log("Privileges: " + emp.privileges);
+  }
+  if ("startDate" in emp) {
+    console.log("Start Date: " + emp.startDate);
+  }
+}
+```
+#### 2.typeof 关键字
+
+```typescript
+function padLeft(value: string, padding: string | number){
+  if(typeof padding === 'number'){
+    return Array(padding + 1).join(" ") + value;
+  }
+  if (typeof padding === "string") {
+    return padding + value;
+  }
+  throw new Error(`Expected string or number, got '${padding}'.`);
+}
+```
+> `typeof` 类型保护只支持两种形式：`typeof v === "typename"` 和 `typeof v !== typename`，`"typename"` 必须是 `"number"`， `"string"`， `"boolean"` 或 `"symbol"`。
+
+#### 3.`instanceof` 关键字
+```typescript
+interface Padder {
+  getPaddingString(): string;
+}
+
+class SpaceRepeatingPadder implements Padder{
+  constructor(private numSpaces: number){}
+  getPaddingString(){
+    return Array(this.numSpaces + 1).join(" ");
+  }
+}
+class StringPadder implements Padder{
+  constructor(private value: string){}
+  getPaddingString(){
+    return this.value;
+  }
+}
+
+let padder: Padder = new SpaceRepeatingPadder(6)
+
+if(padder instanceof SpaceRepeatingPadder){
+  // padder的类型收窄为 'SpaceRepeatingPadder'
+}
+```
+#### 4.自定义类型保护的类型谓词
+
+```typescript
+function isNumber(x: any): x is number {
+  return typeof x === "number";
+}
+
+function isString(x: any): x is string {
+  return typeof x === "string";
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
