feat: _ 数字分隔符add

--- a/TypeScript_TODO/docs/01_TS 中那些奇怪的符号.md
+++ b/TypeScript_TODO/docs/01_TS 中那些奇怪的符号.md
@@ -30,6 +30,9 @@
     - [2.typeof 关键字](#2typeof-关键字)
     - [3.`instanceof` 关键字](#3instanceof-关键字)
     - [4.自定义类型保护的类型谓词](#4自定义类型保护的类型谓词)
+- [七、_ 数字分隔符](#七_-数字分隔符)
+  - [使用限制](#使用限制)
+  - [解析分隔符](#解析分隔符)
 
 ## 一、! 非空断言操作符
 
@@ -358,6 +361,36 @@ function isString(x: any): x is string {
   return typeof x === "string";
 }
 ```
+## 七、_ 数字分隔符
+
+通过把一个下划线作为它们之间的分隔符来分组数字
+
+```typescript
+const inhabitantsOfMunich = 1_464_301;
+const distanceEarthSunInKm = 149_600_000;
+const fileSystemPermission = 0b111_111_000;
+const bytes = 0b1111_10101011_11110000_00001101;
+```
+### 使用限制
+
+```typescript
+3_.141592 // Error
+3._141592 // Error
+1_e10 // Error
+1e_10 // Error
+_126301  // Error
+126301_ // Error
+0_b111111000 // Error
+0b_111111000 // Error
+123__456 // Error
+```
+### 解析分隔符
+
+以下用于解析数字的函数是不支持分隔符Number() parseInt() parseFloat()
+
+通过调用字符串的 replace 方法来移除非数字的字符
+
+
 
 
 
